# fullstack-rust-react

./: .env.example  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.css  App.tsx
frontend/src/components/: WeatherCard.tsx
